[package]
name = "roguelike_rtlk"
version = "0.1.0"
authors = ["Florent KLEE <florent.klee@free.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
specs = { version = "0.16.1", features = ["serde"] }
specs-derive = "0.4.1"
rltk = { version = "0.7.0", features = ["serde"]}
serde = { version = "1.0.105", features = ["derive"] }
serde_json = "1.0.48"
lazy_static = "1.4.0"
regex = "1.3.5"

